--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wanderlust</title>
-  </head>
+<% layout('/layouts/boilerplate') -%>
   <body>
     <h3>All the listing</h3>
-    <form action="/listings/new" method="GET">
+    <!-- <form action="/listings/new" method="GET">
       <button>Create the new list</button>
-    </form>
+    </form> -->
     <ul>
       <% for(let lists of allList) { %>
+      <li><a href="/listings/<%= lists._id %>"><%= lists.title %></a></li>
       <li><a href="/listings/<%= lists._id %>"><%= lists.title %></a></li>
       <% } %>
     </ul>
   </body>
-</html>
