--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create New Listing</title>
-</head>
+<% layout('/layouts/boilerplate') -%>
+
 <body>
   <h1>Create New Listing</h1>
   <form action="/listings" method="POST">
@@ -35,4 +30,3 @@
     <button type="submit">Create Listing</button>
   </form>
 </body>
-</html>
