--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,27 @@
 <% layout('/layouts/boilerplate') -%>
-  <body>
-    <h3>All the listing</h3>
-    <!-- <form action="/listings/new" method="GET">
+  <h3>All the listing</h3>
+  <!-- <form action="/listings/new" method="GET">
       <button>Create the new list</button>
     </form> -->
-    <ul>
-      <% for(let lists of allList) { %>
-      <li><a href="/listings/<%= lists._id %>"><%= lists.title %></a></li>
-      <li><a href="/listings/<%= lists._id %>"><%= lists.title %></a></li>
-      <% } %>
-    </ul>
-  </body>
+  <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <% for(let lists of allList) { %>
+    <a href="/listings/<%= lists._id %>" class="card-links">
+      <div class="card col">
+        <img
+          src="<%= lists.image %>"
+          class="card-img-top"
+          alt="..."
+          style="height: 20rem"
+        />
+        <div class="card-img-overlay"></div>
+
+        <div class="card-body">
+          <p class="card-text">
+            <b><%= lists.title %> <br /></b>
+            &#x20b9; <%= lists.price.toLocaleString("en-IN") %> / night
+          </p>
+        </div>
+      </div>
+    </a>
+    <% } %>
+  </div>
