--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,35 @@
 <% layout('/layouts/boilerplate') -%>
-
-  <body>
-    <ul>
-      <li><%= showDetails.title %></li>
-      <li><%= showDetails.description %></li>
-      <li>Price: &#x20b9; <%= showDetails.price.toLocaleString("en-IN") %></li>
-      <li><%= showDetails.country %></li>
-    </ul>
-    <br />
-    <a href="/listings/<%= showDetails._id %>/edit"> edit the list</a>
-    <br /><br />
-    <form method="post" action="/listings/<%= showDetails._id %>?_method=DELETE">
-      <button>Delete this listings</button>
-    </form>
-  </body>
+<div class="row mt-3">
+  <div class="col-8 offset-3">
+    <h3>Listings Details :-</h3>
+  </div>
+  <div class="card col-6 offset-3 show-card">
+    <img
+      src="<%= showDetails.image %>"
+      class="card-img-top show-img"
+      alt="..."
+    />
+    <div class="card-body">
+      <p class="card-text">
+        <b><%= showDetails.title%></b><br />
+        <%= showDetails.description %> <br />
+        Price: &#x20b9; <%= showDetails.price.toLocaleString("en-IN") %> <br />
+        <%= showDetails.location %> <br />
+        <%= showDetails.country %> <br />
+      </p>
+    </div>
+    <div class="btns mt-5 ">
+      <a
+        href="/listings/<%= showDetails._id %>/edit"
+        class="btn btn-dark col-2 offset-3"
+        >Edit</a
+      >
+      <form
+        method="post"
+        action="/listings/<%= showDetails._id %>?_method=DELETE"
+      >
+        <button class="btn btn-dark offset-5">Delete</button>
+      </form>
+    </div>
+  </div>
+</div>
