--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -18,7 +18,7 @@
         <div class="card-body">
           <p class="card-text">
             <b><%= lists.title %> <br /></b>
-            &#x20b9; <%= lists.price.toLocaleString("en-IN") %> / night
+            &#x20b9; <%= lists.price?.toLocaleString("en-IN") ?? 'N/A' %> <br />
           </p>
         </div>
       </div>
