--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,7 +6,7 @@
   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
     <% for(let lists of allList) { %>
     <a href="/listings/<%= lists._id %>" class="card-links">
-      <div class="card col">
+      <div class="card col  listing-card  ">
         <img
           src="<%= lists.image %>"
           class="card-img-top"
