--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,9 +1,10 @@
 <% layout('/layouts/boilerplate') -%>
 <div class="row mt-3">
   <div class="col-8 offset-3">
-    <h3>Listings Details :-</h3>
+    <h3><%= showDetails.title%></h3>
+    <br />
   </div>
-  <div class="card col-6 offset-3 show-card">
+  <div class="card col-6 offset-3 show-card listing-card">
     <img
       src="<%= showDetails.image %>"
       class="card-img-top show-img"
@@ -11,14 +12,14 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <b><%= showDetails.title%></b><br />
         <%= showDetails.description %> <br />
-        &#x20b9; <%= showDetails.price?.toLocaleString("en-IN") ?? 'N/A' %> <br />
+        &#x20b9; <%= showDetails.price?.toLocaleString("en-IN") ?? 'N/A' %>
+        <br />
         <%= showDetails.location %> <br />
         <%= showDetails.country %> <br />
       </p>
     </div>
-    <div class="btns mt-5 ">
+    <div class="btns mt-5">
       <a
         href="/listings/<%= showDetails._id %>/edit"
         class="btn btn-dark col-2 offset-3"
@@ -30,6 +31,56 @@
       >
         <button class="btn btn-dark offset-5">Delete</button>
       </form>
+    </div>
+  </div>
+  <hr />
+
+  <div class="col-8 offset-3">
+    <h4>Leave the Rating</h4>
+    <form
+      action="/listings/<%= showDetails._id %>/reviews"
+      method="post"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mt-3 mb-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input type="range" min="1" max="5" name="rating" />
+      </div>
+      <div class="mt-3 mb-3">
+        <label for="comments" class="form-label"> Comments</label>
+        <textarea
+          name="comment"
+          id="comment"
+          cols="10"
+          rows="3"
+          class="form-control"
+        ></textarea>
+        <div class="invalid-feedback">Please add some commnets for review</div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+    <hr />
+    <br />
+    <p><b>All reviews</b></p>
+
+    <div class="row">
+      <% for(review of showDetails.reviews) { %>
+      <div class="card col-5 mb-3 ms-3">
+        <div class="card-body">
+          <h5 class="card-title">yash</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="card-text"><%= review.rating %> stars</p>
+          <form
+            action="/listings/<%= showDetails._id %>/reviews/<%= review._id %>?_method=DELETE"
+            class="mb-3"  
+            method="POST"
+          >
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
+        </div>
+      </div>
+      <% } %>
     </div>
   </div>
 </div>
